# anime-list

./: .gitignore  pyproject.toml
app/: config.py  facade.py  interface.py  models.py
app/rsrc/: style.css
